# bcachefs-auto-snapshot

./: Cargo.toml  README.md  bcachefs-auto-snapshot.ron  bcachefs-auto-snapshot.service  bcachefs-auto-snapshot.timer
src/: main.rs  subvolume.rs
